fixed fontSize for input field for visibility

--- a/quizzer/src/components/StripePage/stripe.css
+++ b/quizzer/src/components/StripePage/stripe.css
@@ -1,4 +1,4 @@
-  /* stripe */
+  stripe
   body, html {
     background-color: #f6f9fc;
     font-size: 18px;
@@ -71,20 +71,4 @@
     box-shadow: rgba(50, 50, 93, 0.109804) 0px 4px 6px, rgba(0, 0, 0, 0.0784314) 0px 1px 3px;
     -webkit-transition: all 150ms ease;
     transition: all 150ms ease;
-  } 
-  .main-question-container {
-    display: flex;
-    margin-bottom: -400px;
-    margin-left: 555px;
   }
-  
-  .main-question-button {
-    text-align: center;
-    font-size: 18px;
-    font-weight: bold;
-    color: white;
-    background-color: gray;
-    height: 40px;
-    width: 224px;
-  }
-  
